--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
   "directories": {
     "test": "test"
   },
-  "scripts": {},
+  "scripts": {
+    "test": "npx playwright test tests/requestMocking.spec.js --headed"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@playwright/test": "^1.39.0",
-    "@types/node": "^20.8.9"
+    "@types/node": "^20.8.9",
+    "allure-playwright": "^3.0.0-beta.6"
   }
 }
